bodhilibrs_frompyo3/tests/ui/error-unsupported-field-unit.stderr
error: Unsupported field format, only named fields supported
 --> tests/ui/error-unsupported-field-unit.rs:4:27
  |
4 | struct TestUnsupportedUnit(i32);
  |                           ^^^^^
